// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > analysis should handle clear isochrone results 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochrone": null,
  "isochroneCutoff": 60,
  "isochroneLonLat": null,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle default state 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle enter analysis mode 1`] = `
Object {
  "active": true,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle exit analysis mode 1`] = `
Object {
  "active": false,
  "comparisonTravelTimeSurface": null,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
  "scenarioApplicationWarnings": null,
  "travelTimeSurface": null,
}
`;

exports[`reducers > analysis should handle set active regional analyses 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": "comparison id",
    "grid": null,
    "id": "scenario id",
    "minimumImprovementProbability": 0.95,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle set active variant 1`] = `
Object {
  "active": false,
  "activeVariant": 21,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle set comparison in progress 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle set comparison modifications 1`] = `
Object {
  "active": false,
  "comparisonBundleId": "COMPARISON BUNDLE ID",
  "comparisonModifications": Array [
    "MODIFICATIONS",
  ],
  "comparisonScenarioId": "COMPARISON SCENARIO ID",
  "comparisonVariant": 16,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle set comparison scenario 1`] = `
Object {
  "active": false,
  "comparisonBundleId": "COMPARISON BUNDLE ID",
  "comparisonModifications": null,
  "comparisonScenarioId": "COMPARISON SCENARIO ID",
  "comparisonVariant": 16,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle set isochrone cutoff 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 123,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle set isochrone fetch status 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": true,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle set isochrone lonlat 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "isochroneLonLat": 123,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle set profile request 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "fromTime": 24321,
    "maxWalkTime": 20,
    "toTime": 25220,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle set regional analysis grids 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": undefined,
    "comparisonGrid": Object {
      "which": "COMPARISON GRID",
    },
    "comparisonId": null,
    "differenceGrid": Object {
      "which": "DIFFERENCE_GRID",
    },
    "grid": Object {
      "which": "GRID",
    },
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": Object {
      "which": "PROBABILITY GRID",
    },
  },
  "scenarioApplicationErrors": null,
}
`;

exports[`reducers > analysis should handle set scenario application errors 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSpeed": 4.166666666666667,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "scenarioApplicationErrors": Array [
    Object {
      "messages": Array [
        "Headway is not greater than zero.",
      ],
      "modificationId": "Add Trip Pattern",
      "title": "Error while applying the modification entitled 'Add Trip Pattern'.",
    },
  ],
}
`;
